# base-picoRTOS-stm32f4-pill

./: CMakeLists.txt  README.md  toolchain.cmake
Inc/: picoRTOSConfig.h
Src/: main.c
